test/puzzles/deitz/puzzle071108.good
puzzle071108.chpl:1: error: Bounds of '..' must be integers of compatible types, when specified.
